log
Thu 27 Mar 2025 04:47:41 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu 27 Mar 2025 04:53:26 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
cb9a611
Thu 27 Mar 2025 04:56:10 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
831c3d7
Thu 27 Mar 2025 04:57:00 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
f8b5870
Thu 27 Mar 2025 06:40:06 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
c52a3ad
Thu 27 Mar 2025 06:43:59 PM UTC: 
 list.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 25/70
88306c4
Thu 27 Mar 2025 06:44:56 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
600f4a4
Thu 27 Mar 2025 06:55:18 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:101:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  101 | void cleanList(List *list) {
      |      ^~~~~~~~~
list.c:94:7: error: ‘popBack’ defined but not used [-Werror=unused-function]
   94 | void *popBack(List *list) {
      |       ^~~~~~~
list.c:82:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   82 | void pushBack(List *list, void *data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ee6e14
